@@ -1,3 +1,9 @@
+2010-10-26  Mike Frysinger  <vapier@gentoo.org>
+
+  * src/tap/cable_list.h, src/tap/cable/generic_usbconn_list.h,
+    src/tap/cable/ft2232.c: Add support for the Milkymist FTDI USB cable by
+    Michael Walle.
+
 2010-10-19  Mike Frysinger  <vapier@gentoo.org>
 
   * src/tap/cable.c, src/tap/detect.c, src/tap/cable/ft2232.c,
